# pksll-tests

./: .env  .env.test  .gitignore  INHB_PKIT.stl  INHB_SDV.stl  MANIFEST.in  PKSLL Analisys.ipynb  PKSLL Analyzes.ipynb  PKSLLAnalyzes.py  Readme.md  aut.csv  data.csv  docker-compose.test.yml  docker-compose.yml  output_data_old.csv  pytest.ini  requirements.txt  setup.cfg  setup.py  zit.csv
.ipynb_checkpoints/: PKSLL Analyzes-checkpoint.ipynb  docker-compose.test-checkpoint.yml  io_normalize-checkpoint.py
src/plc_tester.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/plc_tester/db/: repository.py
src/plc_tester/models/: signal.py  tagmodel.py
src/plc_tester/plc/: pksll.py  plc.py
src/tests/: test_db.py  test_pksll.py
