[metadata]
name = plc_tester
version = attr: plc_tester.__version__

description = Load data from diferent data sources and run tests on plc using opc-ua protocol
long_description = file: README.md
long_description_content_type = text/markdown

url = http://buzios-automacao.petrobras.com.br/

author = Evandro Abreu de Oliveira
author_email = evandro_abreu@petrobras.com.br
maintainer = Fulvio Serpentini
maintainer_email = fulvio.serpentini@petrobras.com.br

classifiers =
    Development Status :: 3 
    License :: Copyright   
    Programming Language :: Python :: 3.9.5
    Operating System :: OS Independent
    
keywords = driver OPCUA data unit testing 

[options]
package_dir = =src
packages = find_namespace:
include_package_data = True
python_requires = >=3.8, <4
install_requires = 
    numpy==1.19.0
    pandas==1.3.1
    scikit-learn
    cryptography==35.0.0
    opcua==0.98.13
    paho-mqtt==1.6.1
    pause==0.3
    pytest==6.2.5
    pytest-asyncio== 0.16.0
    pytest-cov==3.0.0
    pytest-testmon==1.2.2
    pytest-watch==4.2.0
    python-dateutil==2.8.1
    pytz==2021.1
    six==1.16.0
    lxml==4.6.3
    influxdb-client==1.23.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    plc-tester = plc_tester.run_logic:main
    plc-tester-example = plc_tester.run_sample_logic:main

    
